--- a/index.html
+++ b/index.html
@@ -2,20 +2,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/style.css">
+
 <title></title>
 </head>
-<body><header tag><class navigation>
-<div tag ><in line block and logo>
-<div tag><img with a logo>
-<nav tag><class in-line block>
-<unordered list tag>wraps<li tag><class in-line block>
-<li tag><text about>
-<li tag><text skills>
-<li tag><text work>
-<li tag><text contact>
-
-
-
+<body>
+<section id="heroimg">
+    <div>
+        <img src="images/IMG_75681.png" id="painting">
+    <p>Courtney is really the best coder in the world.</p> 
+    <tag><button> Download Resume</button></tag>
+</section>
+<footer>
+<div class="container">
+<ul>
+    <li tag><text about>
+    <li tag><text skills>
+    <li tag><text work>
+    <li tag><text contact>    
+    </ul>
+</div>
+    </footer>
 
 </body>
 <html>
