Changed text to blue. Hover state on button
Changed text to blue. Hover state on button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <title></title>
 </head>
 <body>
+    <nav>
+        Home 
+    </nav>
 <section id="heroimg">
     <div>
         <img src="images/IMG_75681.png" id="painting">
@@ -25,10 +28,10 @@
     </footer>
 
 </body>
-<html>
-<div id="Parent">
+</html>
 
-</div>
-<div id="child">
 
-</div>
+
+
+
+
